bug: fixed an issue where the gradient text would get cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,13 +33,13 @@
 
     .hero-section .background {
         background-color: rgba(25, 27, 35, 0.5);
-        padding-left: 30px;
-        padding-right: 30px;
     }
-
-    .hero-section h1 {
-        font-size: 72px;
-        background: -webkit-linear-gradient(#FFC306, #FF9901);
+    
+    .hero-section span {
+        font-size: 55px;
+        min-height: 100px;
+        margin: 0;
+        background: linear-gradient(#FFC306, #FF9901);
         background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
